# testing

./: .gitlab-ci.yml  README.md  test
.github/workflows/: MobSF.yml  main.yml  trivy.yml
automation/e2e/tucana_automation/: CHANGELOG.md  README.md  config.json  mllp_server.py  package-lock.json
cloud/: README.md  docker-compose.yaml  run.sh
cloud/app/cms/: .eslintrc.js  .gitignore  build.sh  forge.config.js  index.js  notes.txt  package-lock.json  package.json
cloud/gateways/: README.md
cloud/gateways/mirth/: Dockerfile  README.md  build.sh  mirth.properties  sync.sh
cloud/gateways/realtime/: Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml
cloud/gateways/realtime/deploy/: Chart.yaml  values.dev.yaml  values.hq.yaml  values.prod.yaml  values.qa.yaml  values.yaml
cloud/gateways/realtime/deploy/templates/: deployment.yaml  ingress.yaml
cloud/gateways/realtime/scripts/: create_env.sh  format.sh  run-server.sh
cloud/gateways/realtime/scripts/docker/: build-image.sh  exec.sh  rm.sh  run.sh  start.sh  stop.sh
cloud/gateways/realtime/src/: cache.py  main.py  settings.py  streams.py
cloud/gateways/realtime/src/common/: enums.py  schemas_base.py
cloud/gateways/realtime/src/common/clients/patient/: http_client.py  platform.py  schemas.py  services.py
cloud/gateways/realtime/src/health_check/: schemas.py  services.py
cloud/gateways/realtime/src/realtime/: api.py  authentication.py  schemas.py  subscriber.py
cloud/gateways/realtime/tests/factories/: broker.py  patient.py
cloud/gateways/realtime/tests/src/: test_cache.py  test_main.py
cloud/gateways/realtime/tests/src/common/patient/: test_client.py  test_platform.py  test_services.py
cloud/gateways/realtime/tests/src/realtime/: test_api.py  test_authentication.py  test_schemas.py  test_streams.py  test_subscriber.py
cloud/gateways/sdc/: Dockerfile  README.md  build.sh  docker-compose.yaml  pom.xml
cloud/gateways/web/: Dockerfile  README.md  build.sh  gunicorn_conf.py  pyproject.toml
cloud/libraries/python/cache/: build.sh  pyproject.toml
cloud/libraries/python/cache/cache/: __init__.py  redis_cache.py  settings.py
cloud/libraries/python/cache/tests/: conftest.py
cloud/libraries/python/cache/tests/src/: test_redis_cache.py
cloud/sites/central_monitoring/: .env.development  .env.production  .env.test  .eslintrc.json  .gitignore  (+12 more)
docsv2/: README.md
docsv2/technical_docs/: Configuration.md  SDD.md
infra/: build.sh  offline-infra-images.lst
infra/kafka-connect-s3/: Dockerfile
infra/setup/: Dockerfile  README.md
scripts/buildtools/: README.md  build.sh  pyproject.toml
scripts/buildtools/buildtools/: main.py  settings.py
scripts/buildtools/buildtools/utils/: constants.py  errors.py  git.py  github.py  interface.py  models.py  monorepo.py
scripts/buildtools/tests/: test_main.py  test_models.py
scripts/buildtools/tests/factories/: model_factory.py
scripts/buildtools/tests/utils/: test_github.py  test_interface.py
scripts/cms_installer/: .gitignore  README.md  build.sh  cms_installer.spec  compile.sh  pyproject.toml  run.sh
scripts/cms_installer/app/: installer.py  main.py  models.py
scripts/cms_installer/app/screens/: disk.py  k8s_lb.py  k8s_nodes.py  layout.py  ssh_config.py  summary.py  welcome.py
scripts/cms_installer/app/styles/: common.tcss  welcome.tcss
(+1141 files in other folders)
