[tool.poetry]
name = "cms-installer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
textual = "^0.85.0"
pyinstaller = "^6.11.0"
docker = "^7.1.0"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pytest = "^8.3.3"
coverage = "^7.6.4"


[tool.poetry.group.develop.dependencies]
textual-dev = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
