
[tool.poetry]
name = "realtime-tucana"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
websockets = "12.0"
common-schemas = { path = "../../libraries/python/common-schemas", develop = true }
healthcheck = { path = "../../libraries/python/healthcheck", develop = true }
commons = {path = "../../libraries/python/commons", develop = true}

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.10.0"
behave = "^1.2.6"
pytest = "^7.1.3"
respx = "^0.20.0"
coverage = "^7.2.2"
ruff = "^0.4.9"
polyfactory = "^2.12.0"
pytest-asyncio = "^0.23.2"
test-tools = { path = "../../libraries/python/test-tools", develop = true }


[tool.coverage.run]
omit = ["src/settings.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
lint.ignore = ["F722"]
lint.select = [
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "ERA", # eradicate (removes commented out code)
    "F",   # pyflakes
    "I",   # isort
    "PLC", # pylint
    "SIM", # flake8-simplify
    "TID", # tidy-imports
    "W",   # warnings
]
