[tool.poetry]
name = "cache"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "cache" }]


[tool.poetry.dependencies]
python = "3.11.9"
commons = {path = "../commons", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
coverage = "^7.2.7"
fakeredis = "^2.17.0"
pytest-asyncio = "^0.21.1"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
lint.ignore = ["F722"]
lint.select = [
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "ERA", # eradicate (removes commented out code)
    "F",   # pyflakes
    "I",   # isort
    "PLC", # pylint
    "SIM", # flake8-simplify
    "TID", # tidy-imports
    "W",   # warnings
]
